--- a/css/index.css
+++ b/css/index.css
@@ -87,6 +87,7 @@ ul {
     height: 44px;
     min-width: 320px;
     max-width: 640px;
+    z-index: 999;
 }
 
 .search_btn {
@@ -161,6 +162,30 @@ ul {
 /*焦点图*/
 .slide img {
     width: 100%;
+}
+/*复制swiper css样式*/
+.swiper-container {
+    width: 100%;
+    height: 100%;
+}
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
 }
 
 /*品牌日*/
