--- a/css/index.css
+++ b/css/index.css
@@ -188,6 +188,10 @@ ul {
     align-items: center;
 }
 
+.swiper-pagination-bullet {
+    background-color: #fff!important;
+}
+
 /*品牌日*/
 .brand {
     overflow: hidden;
